Button Spacing on smaller Devices FIX

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,10 +74,14 @@ body {
   font-size: 100%;
   margin-top: 10px;
   box-shadow: 0 5px 10px #0000008a;
+  margin-left: 2px;
+  margin-right: 2px;
 }
 
 #button {
   padding-top: 10px;
+  margin-left: 2px;
+  margin-right: 2px;
 }
 
 
